# web-frameworks

./: .editorconfig  .gitignore  .rubocop.yml  Gemfile  Makefile  README.md  Rakefile  config.yaml  data.json  data.min.json  mise.toml  run.sh
.github/workflows/: ci.yml
.spec/: route_spec.rb  spec_helper.rb
.tasks/: ci.rake  cloud.rake  collect.rake  config.rake  db.rake  helpers.rb  memory_sampler.rb
c/: Dockerfile
c/agoo-c/: config.yaml
clojure/: Dockerfile
clojure/coast/: config.yaml
clojure/donkey/: config.yaml
clojure/luminus/: config.yaml  project.clj
clojure/pedestal/: config.yaml
cpp/: Dockerfile
cpp/drogon/: config.yaml
cpp/oatpp/: config.yaml
crystal/: Dockerfile  config.yaml
crystal/amber/: config.yaml
crystal/athena/: config.yaml
csharp/: Dockerfile
d/: Dockerfile  config.yaml
dart/: aot.Dockerfile  config.yaml  vm.Dockerfile
elixir/: Dockerfile  config.yaml
fsharp/: Dockerfile
gleam/: Dockerfile  config.yaml
go/: Dockerfile  config.yaml
guile/: Dockerfile  config.yaml
haskell/: Dockerfile  config.yaml
java/: Dockerfile
javascript/: bun.Dockerfile  config.yaml  deno.Dockerfile  node.Dockerfile
julia/: Dockerfile
kotlin/: Dockerfile  config.yaml
lua/: Dockerfile
luau/: Dockerfile  config.yaml
nim/: Dockerfile  config.yaml
ocaml/: Dockerfile
perl/: Dockerfile
php/: Dockerfile  config.yaml
python/: Dockerfile
python/mq-bridge-py/: config.yaml  pyproject.toml  server.py
r/: Dockerfile  config.yaml
ruby/: Dockerfile  config.yaml
rust/: Dockerfile  config.yaml
rust/mq-bridge/: Cargo.toml  config.yaml
rust/mq-bridge/src/: main.rs
scala/: Dockerfile  config.yaml
swift/: Dockerfile  config.yaml
v/: Dockerfile  config.yaml
zig/: Dockerfile
(+283 files in other folders)
